Fix: Coordinate mapping for gesture mirroring and Content: Total SEO & Brand overhaul for premium impact

--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!doctype html>
 <html lang="en" class="dark">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>Heptact - Gesture-Controlled 3D Experiences</title>
-    <meta name="description" content="We build custom gesture-controlled 3D components for websites. Webcam-powered. Hardware-free. Transform how users interact with your brand." />
-    <meta name="author" content="Heptact" />
-    <meta name="keywords" content="gesture control, 3D components, web interaction, hand tracking, agency, custom development" />
 
-    <meta property="og:title" content="GestureUI - Control the Web With Your Hands" />
-    <meta property="og:description" content="Revolutionary gesture-controlled 3D web components. Transform web interaction with natural hand movements." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <title>Heptact | The Future of Gesture-Controlled Web Experiences</title>
+  <meta name="description"
+    content="Heptact builds premium, hardware-free gesture interfaces for modern brands. Transform your website into a touchless 3D experience powered by high-performance AI." />
+  <meta name="author" content="Heptact" />
+  <meta name="keywords"
+    content="gesture control, touchless UI, AI web development, 3D web experiences, hand tracking agency, premium web interaction" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@GestureUI" />
-    <meta name="twitter:title" content="GestureUI - Control the Web With Your Hands" />
-    <meta name="twitter:description" content="Revolutionary gesture-controlled 3D web components." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:title" content="Heptact - Experience the Next Dimension of Web Control" />
+  <meta property="og:description"
+    content="Stop clicking. Start moving. Premium gesture-driven 3D components for elite brands. Hardware-free integration." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <link rel="canonical" href="https://gestureui.dev" />
-    
-    <!-- MediaPipe Libraries (CDN for Production Stability) -->
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4.1646424915/hands.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
-  </head>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@Heptact" />
+  <meta name="twitter:title" content="Heptact | Beyond the Mouse & Key" />
+  <meta name="twitter:description"
+    content="Hardware-free gesture control for the modern web. Transform user engagement with touchless 3D interfaces." />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <link rel="canonical" href="https://heptact.tech" />
+
+  <!-- MediaPipe Libraries (CDN for Production Stability) -->
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4.1646424915/hands.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
